src/widgets/snapshots/timr_tui__widgets__footer_test__menu_hidden.snap
---
source: src/widgets/footer_test.rs
expression: t.backend()
---
" m show menu ───────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
