src/widgets/snapshots/timr_tui__widgets__footer_test__menu_pomodoro_auto_switch_off.snap
---
source: src/widgets/footer_test.rs
expression: t.backend()
---
" m hide menu ───────────────────────────────────────────────────────────────────────────────────────────────────────────"
" screens      1 countdown   2 timer   3 pomodoro   4 event   5 local time   ← or → switch screens                       "
" appearance   , change style   . toggle deciseconds   : toggle local time                                               "
" controls     space start   e edit   r reset clock   ^r reset clocks/rounds                                             "
"              ^← or ^→ switch work/pause screens   a enable auto switch                                                 "
"                                                                                                                        "
