src/widgets/snapshots/timr_tui__widgets__footer_test__menu_pomodoro_auto_switch_on.snap
---
source: src/widgets/footer_test.rs
expression: t.backend()
---
" m hide menu ───────────────────────────────────────────────────────────────────────────────────────────────────────────"
" screens      1 countdown   2 timer   3 pomodoro   4 event   5 local time   ← or → switch screens                       "
" appearance   , change style   . toggle deciseconds   : toggle local time                                               "
" controls     space start   e edit   r reset clock   ^r reset clocks/rounds   a disable auto switch                     "
"              ^← or ^→ switch work/pause   ↑ next round   ↓ previous round                                              "
"                                                                                                                        "
